# Blog

./: .gitignore  Makefile  README.md  docker-compose.yml  kibana.yml  manage.py  pyproject.toml  requirements.txt
blog/: admin.py  feeds.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py  0005_post_search_vector_post_blog_post_search__528e75_gin.py  0006_post_search_vector_trigger.py  0007_post_description.py  0008_alter_post_description.py  0009_remove_comment_email_remove_comment_name_and_more.py
blog/repositories/: Repository.py  base.py
blog/static/css/: blog.css  blog_v.0.1.css  test.css
blog/templates/blog/: base.html  base_v.0.1.html
blog/templates/blog/post/: comment.html  detail.html  latest_posts.html  list.html  search.html  share.html
blog/templatetags/: blog_tags.py
conf/: settings.py  urls.py
src/domain/: exceptions.py
src/domain/entities/: account.py  comment.py  post.py
src/domain/services/: everyone.py
src/infrastructure/adminsite/post/: admin.py
src/infrastructure/api/routes/: urls.py
src/infrastructure/api/views/: post.py
src/infrastructure/factories/: account.py  post.py
src/infrastructure/server/: urls.py  wsgi.py
src/infrastructure/settings/: base.py  dev.py  prod.py  test.py
src/interface/controllers/: account.py  post.py
src/interface/repositories/: account.py  base.py  post.py
src/interface/routes/: post.py
src/interface/serializers/: post.py
src/usecases/: account.py  post.py
(+17 files in other folders)
